// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio check component controlled 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
</div>
`;

exports[`Radio check component isDisabled 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    className="pf-c-check__input"
    disabled={true}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
</div>
`;

exports[`Radio check component label is function 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check__label {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    <h1>
      Header
    </h1>
  </label>
</div>
`;

exports[`Radio check component label is node 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check__label {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    <h1>
      Header
    </h1>
  </label>
</div>
`;

exports[`Radio check component label is string 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check__label {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    Label
  </label>
</div>
`;

exports[`Radio check component passing HTML attribute 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check__label {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    aria-labelledby="labelId"
    checked={true}
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    label
  </label>
</div>
`;

exports[`Radio check component passing class 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check__label {
  display: block;
}
.pf-c-check.class-123 {
  display: block;
}

<div
  className="pf-c-check class-123"
>
  <input
    aria-invalid={false}
    aria-label="check"
    checked={true}
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="pf-c-check__label"
    htmlFor="check"
  >
    label
  </label>
</div>
`;

exports[`Radio check component uncontrolled 1`] = `
.pf-c-check__input {
  display: block;
}
.pf-c-check {
  display: block;
}

<div
  className="pf-c-check"
>
  <input
    aria-invalid={false}
    aria-label="check"
    className="pf-c-check__input"
    disabled={false}
    id="check"
    name="check"
    onChange={[Function]}
    type="radio"
  />
</div>
`;
